fixed card spacing

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ h1{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap:32px;
-    padding: 48px 96px;
+    padding: 48px 32px;
 }
 
 .book-item{
